testsuite/poke.pkl/struct-ref-diag-1.pk
/* { dg-do compile } */

23 /* { dg-error "invalid operand.*\n.*expected struct" } */
.la;
